--- a/HidaSushi.Client/_Imports.razor
+++ b/HidaSushi.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using HidaSushi.Client
 @using HidaSushi.Client.Components.Layout
+@using HidaSushi.Client.Components.Shared
+@using HidaSushi.Client.Resources
