--- a/HidaSushi.Admin/Components/Routes.razor
+++ b/HidaSushi.Admin/Components/Routes.razor
@@ -1,22 +1,11 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
+<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        @if (routeData.PageType.Name == "Login")
-        {
-            <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-            <FocusOnNavigate RouteData="routeData" Selector="h1" />
-        }
-        else
-        {
-            <AuthorizeView Roles="Admin">
-                <Authorized>
-                    <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-                    <FocusOnNavigate RouteData="routeData" Selector="h1" />
-                </Authorized>
-                <NotAuthorized>
-                    <RedirectToLogin />
-                </NotAuthorized>
-            </AuthorizeView>
-        }
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+            <NotAuthorized>
+                <RedirectToLogin />
+            </NotAuthorized>
+        </AuthorizeRouteView>
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
@@ -24,4 +13,4 @@
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
-</Router>
+</Router> 
