--- a/HidaSushi.Admin/Components/_Imports.razor
+++ b/HidaSushi.Admin/Components/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -8,6 +8,8 @@
 @using Microsoft.JSInterop
 @using HidaSushi.Admin
 @using HidaSushi.Admin.Components
-@using HidaSushi.Shared.Models
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using System.ComponentModel.DataAnnotations
 @using HidaSushi.Admin.Services
+@using HidaSushi.Shared.Models 
